# django-chili

./: .gitignore  .readthedocs.yaml  README.md  README.rst  VERSION  pyproject.toml  requirements.txt
.github/: FUNDING.yml
django_chili/: __init__.py  bowl.py  chop.py  chunk.py  sauce.py
docs/source/: api.rst  conf.py  faq.rst  index.rst  overview.rst  reference.rst  usage.rst
docs/source/reference/: index.rst  python.rst  templatetags.rst
