[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-chili"
description = "A short description of your project"
readme = "README.rst"
authors = [{name = "Sean O'Dell", email = "sean@celsoft.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

dynamic = ["dependencies", "version"]

[tool.setuptools]
packages = ["django_chili"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["VERSION"]}
